Fix button styles for action bar buttons (#1177)
* Fix button styles for action bar buttons

* Fix button colors

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -452,11 +452,19 @@ button.sidebar-button {
     transition: background-color 0.125s ease-in-out;
     outline: none;
     font-size: inherit;
+    border-radius: 0;
+    box-shadow: none;
 }
 button.sidebar-button:disabled {
     cursor: default;
 }
-button.sidebar-button:hover:not(:disabled) {
+button.sidebar-button:hover,
+button.sidebar-button:active,
+button.sidebar-button:focus {
+    box-shadow: none;
+}
+button.sidebar-button:hover:not(:disabled),
+button.sidebar-button:focus:not(:disabled) {
     background-color: var(--sidebar-button-background-color-hover);
 }
 button.sidebar-button:active:not(:disabled) {
@@ -465,7 +473,8 @@ button.sidebar-button:active:not(:disabled) {
 button.sidebar-button.danger {
     background-color: var(--sidebar-button-danger-background-color);
 }
-button.sidebar-button.danger:hover:not(:disabled) {
+button.sidebar-button.danger:hover:not(:disabled),
+button.sidebar-button.danger:focus:not(:disabled) {
     background-color: var(--sidebar-button-danger-background-color-hover);
 }
 button.sidebar-button.danger:active:not(:disabled) {
@@ -489,7 +498,8 @@ button.sidebar-button.danger:active:not(:disabled) {
 button.sidebar-button:disabled .sidebar-button-icon {
     background-color: var(--sidebar-button-disabled-icon-color);
 }
-button.sidebar-button.danger:hover .sidebar-button-icon {
+button.sidebar-button.danger:hover .sidebar-button-icon,
+button.sidebar-button.danger:focus .sidebar-button-icon {
     background-color: var(--sidebar-button-danger-icon-color);
 }
 .sidebar-button-icon[data-icon=cross] {
