Fix kanji selection area being on top of tags (#1191)

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -1252,6 +1252,8 @@ button.action-button[data-icon=source-term]::before {
     line-height: 1;
     padding: 0.01em;
     vertical-align: top;
+    position: relative;
+    z-index: -1;
 }
 .kanji-glyph-data {
     margin-top: 0.75em;
