Improve contrast of dark theme tag text color (#1192)

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -164,7 +164,7 @@
 
     --pitch-accent-annotation-color: #ffffff;
 
-    --tag-text-color: #e1e1e1;
+    --tag-text-color: #f1f1f1;
     --tag-border-color: transparent;
     --tag-default-background-color: #69696e;
     --tag-name-background-color: #489148;
