Translator regex replacements (#1199)
* Add support for regex replacements during the translation process

* Allow assignment of textReplacements

* Rename

* Set up test data

* Write expected data

* Set up options

* Prevent infinite loop if regex matches empty string

* Implement setting controller

* Add support for testing pattern replacements

--- a/ext/mixed/css/material.css
+++ b/ext/mixed/css/material.css
@@ -617,6 +617,10 @@ input[type=number].input-with-suffix-button {
     border-right-style: none;
     z-index: 1;
 }
+input[type=text].code,
+input[type=number].code {
+    font-family: 'Courier New', Courier, monospace;
+}
 
 
 /* Material design button */
